--- a/css/styles.css
+++ b/css/styles.css
@@ -96,9 +96,15 @@ a {
 
 @media screen and (min-width: 550px) {
     h2 {
-        margin-bottom: 3em;
-    }
+        margin-bottom: 3em; }
 }
+
+@media screen and (min-width: 550px) and (max-width: 950px) {
+    button,
+    .button {
+        width: 100%; }
+}
+
 
 
 /* Launch
@@ -203,8 +209,7 @@ a {
         max-width: 300px; }
 
     #arrows-icon {
-        margin-bottom: -15%;
-    }
+        margin-bottom: -15%; }
 
 	#location-icon {
 	    width: 8rem;
@@ -223,6 +228,11 @@ a {
     position: absolute;
     bottom: -10px;
     right: 0; }
+
+@media screen and (min-width: 1500px) {
+    #arrows-icon {
+        margin-bottom: -10%; }
+}
 
 
 /* About
@@ -259,7 +269,7 @@ a {
     top: 0;
     padding-top: 0.75rem;
     z-index: 1;
-    max-width: 1400px; } /* need to work out how to center a fixed div for large screens */
+    max-width: 1400px; }
     
     .back-link {
         position: absolute;
@@ -324,6 +334,17 @@ a {
 @media screen and (min-width: 550px) {
     .afternav {
         padding-top: 12rem; }
+}
+
+@media screen and (min-width: 1401px) {
+    .nav {
+        width: 1400px;
+        margin-left: 260px; }
+    
+    .nav:before {
+        content: '';
+        height: 7rem;
+    }
 }
 
 
@@ -671,6 +692,12 @@ img#google {
         text-align: center; }
 }
 
+@media screen and (min-width: 800px) {
+    .result-title {
+        font-size: 1.1em;
+        padding: 20px 20px; }
+}
+
 
 /*  Location error (oops)
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -726,7 +753,8 @@ img.line {
 
 @media screen and (max-width: 550px) {
     #img-container,
-    #newspaper-container {
+    #newspaper-container,
+    .results-container {
         padding: 0;
         width: 100%; }
 }
@@ -760,10 +788,17 @@ p#newspaper-desc {
     text-align: justify; }
 
 p#doozy {
-    margin: 3rem 0 3rem; }
+    margin: 3rem 0 4rem; }
 
 section#newspaper .button {
     margin: 0 auto 10rem; }
+
+#news-open:after {
+    content: url(../images/handdrawn/curved-arrow-down.svg);
+    position: absolute;
+    width: 5rem;
+    top: 30%;
+    left: 77%; }
 
 @media screen and (min-width: 551px) {
     div#grey-wrap {
