Added scrollToTop and scrollToResults functions
- scrollToTop allows the user to see new content from the top, as
intended.
- scrollToResults allows the user to go back to the same place in the
results list that they were at before clikcing on a result

-- Additional back-link functions were removed for newspaper and flickr
results. These functions were not working (I think they need to be in
the doc ready function?) and they have been previously added with the
other back-link buttons.

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,8 +346,7 @@ a {
 
 #loading,
 #discovering,
-#location-error,
-#flickr {
+#location-error {
     position: fixed;
     top: 0;
     z-index: 1;
