--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,12 @@ a {
     width: 100vw;
     background-color: #fff;
     text-align: center; }
-    
+
+.stillLooking {
+    margin-top: 2rem;
+    color: #619741;
+}
+
 #compass {
     display: inline; }
    
@@ -604,6 +609,12 @@ div#star-twelve {
 	width: 80%;
 	margin: 0 auto;
 	text-align: center; }
+.errorMessage {
+    width: 80%;
+    margin: 0 auto 1rem;
+    color: orangered;
+    font-weight: 600;
+}
 	
 #google-strip {
     position: fixed;
