--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ button,
     display: block;
     width: 80%;
     margin: 0 auto;
-    padding: 1rem;
+    padding: 2rem 1rem;
     color: #619741;
     background-color: #fff;
     font-size: 1.5rem;
@@ -270,9 +270,9 @@ a {
 .nav {
     height: 7rem;
     width: 100%;
-    max-width: 960px;
+    max-width: 1440px;
     margin: 0 auto;
-    padding: 0.75rem;
+    padding: 2rem;
     z-index: 1;
     background: #fff; }
     
@@ -319,7 +319,7 @@ a {
     }
 
 .afternav {
-    padding-top: 8rem; }
+    padding-top: 10rem; }
 
 .main-row {
 	margin: 0 auto;
@@ -603,28 +603,25 @@ div#star-twelve {
 #places {
 	margin-bottom: 5rem; }
 
-#loc-denied {
+.error-message {
 	display: none;
 	padding-bottom: 2em;
 	width: 80%;
 	margin: 0 auto;
 	text-align: center; }
-.errorMessage {
-    width: 80%;
-    margin: 0 auto 1rem;
-    color: orangered;
-    font-weight: 600;
-}
+
+#api-fail {
+	color: #619741; }
 	
 #google-strip {
     position: fixed;
     bottom: 0;
-    padding: .5rem 0 0;
     background-color: #303030;
     text-align: center; }
 
 img#google {
-     }
+	vertical-align: middle;
+    padding: .9rem 0; }
 
 
 /*  Results
